<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context="com.martink.loto.FilterActivity" >

    <LinearLayout
        android:id="@+id/filterHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="#3949ab"
        android:elevation="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/filter_header"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/filterButtonLayout"
        android:layout_below="@+id/filterHeaderLayout" >

        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/filterText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:textColor="#DF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/filter_bold_label"
                android:textColor="#3949ab"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/filterText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:textColor="#DF000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/filterButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true" 
        android:background="@drawable/border_top" >

        <Button
            android:id="@+id/filterAgreeButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:text="@string/filter_agree_button"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/filterDeclineButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:text="@string/filter_decline_button"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>