<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context="com.martink.loto.PictureActivity" >

    <LinearLayout
        android:id="@+id/mainHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="#3949ab"
        android:elevation="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/picture_header"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true" 
        android:background="@drawable/border_top" >

        <Button
            android:id="@+id/cameraButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:onClick="onClick"
            android:text="@string/camera_button"
            android:textColor="#ffffff"
			android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
		   android:id="@+id/infoLayout"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:orientation="vertical" 
		   android:layout_below="@+id/mainHeaderLayout" >
		
		   <LinearLayout
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:background="#7986cb"
		       android:elevation="2dp"
		       android:orientation="vertical" >
		
		       <TextView
		           android:id="@+id/infoText"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_marginBottom="15dp"
		           android:layout_marginLeft="20dp"
		           android:layout_marginRight="20dp"
		           android:layout_marginTop="15dp"
		           android:lineSpacingExtra="5dp"
		           android:text="Rakendusega on võimalik kontrollida Bingo Loto, Viking Lotto ja Eurojackpoti pileteid."
		           android:textColor="#ffffff"
                   android:textSize="18sp" />
			
			</LinearLayout>

		   <TextView
		       android:id="@+id/textView1"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_marginBottom="15dp"
		       android:layout_marginLeft="20dp"
		       android:layout_marginRight="20dp"
		       android:layout_marginTop="15dp"
		       android:lineSpacingExtra="5dp"
		       android:text="@string/picture_bold_label"
		       android:textColor="#3949ab"
               android:textSize="18sp"
               android:textStyle="bold" />

		   <TextView
		       android:id="@+id/textView2"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginLeft="20dp"
		       android:layout_marginRight="20dp"
		       android:lineSpacingExtra="5dp"
		       android:text="Veenduge et pildil oleks: pileti loosimise number ning mängunumbrid."
		       android:textColor="#DF000000"
               android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>