<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context="com.martink.loto.FilterActivity" >

    <LinearLayout
        android:id="@+id/resultHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="#3949ab"
        android:elevation="4dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/resultHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/result_header"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultButtonLayout"
        android:layout_below="@+id/resultHeaderLayout" >

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/resultLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7986cb"
                android:elevation="2dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/gameResultText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="25dp"
                    android:lineSpacingExtra="5dp"
                    android:textColor="#ffffff"
                	android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/result_bold_label"
                android:textColor="#3949ab"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/resultText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:lineSpacingExtra="5dp"
              	android:textColor="#DF000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/resultButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true" 
        android:background="@drawable/border_top" >
        
        <Button
			android:id="@+id/resultButton"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="0dp"
			android:layout_height="58dp"
			android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
			android:layout_weight="1.0"
			android:onClick="onClick"
			android:text="@string/result_button"
			android:textColor="#ffffff"
			android:textSize="16sp" />
    </LinearLayout>
    
</RelativeLayout>